# quick

./: .gitignore
BlazorMauiApp/: BlazorMauiApp.sln
BlazorMauiApp/BlazorMauiApp/: BlazorMauiApp.csproj  MainPage.xaml  MauiProgram.cs
BlazorMauiApp/BlazorMauiApp/wwwroot/: index.html
vsCMakeProject/: CMakeLists.txt  CMakeSettings.json
vsCMakeProject/vsCMakeProject/: CMakeLists.txt  query.h  query_vector.h  vsCMakeProject.cpp  vsCMakeProject.h
